[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/layers/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://samagri/theme/user_interface.tres" type="Theme" id=3]
[ext_resource path="res://samagri/Player_MainMenu.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1600, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1920, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2240, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2560, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2880, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3200, 0, 320, 320 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "New Anim",
"speed": 10.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 414, 301 )
offset = Vector2( 100, 0 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 601.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 403.0
margin_top = 401.0
margin_right = 632.0
margin_bottom = 455.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 403.0
margin_top = 479.0
margin_right = 632.0
margin_bottom = 534.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Control"]
position = Vector2( 521, 219 )
frames = SubResource( 12 )
animation = "New Anim"
frame = 4
playing = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 421.0
margin_top = 59.0
margin_right = 621.0
margin_bottom = 108.0
color = Color( 0.262745, 0.290196, 0.372549, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect"]
margin_left = -11.0
margin_top = -10.0
margin_right = 124.0
margin_bottom = 28.0
rect_scale = Vector2( 1.72402, 1.67047 )
text = "Runner"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
